--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "lodash.merge": "^4.6.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1"
   },
   "devDependencies": {
     "@types/node": "^18.14.0",
