--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "jsonwebtoken": "^9.0.0",
     "lodash.merge": "^4.6.2",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "openai": "^3.2.1"
   },
   "devDependencies": {
     "@types/node": "^18.14.0",
