edit to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,9 @@
 		"outDir": "./dist",
 		"rootDir": "./src",
 		"strict": false,
-		"lib": ["esnext"],
+		"lib": ["esnext", "dom"],
 		"esModuleInterop": true,
-		"declaration": true,
+		"declaration": true
 	},
 	"include": ["src/**/*.ts"]
 }
