--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
+    "instagram-private-api": "^1.45.3",
     "jsonwebtoken": "^9.0.0",
     "lodash.merge": "^4.6.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
     "@types/node": "^18.14.0",
